--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.1);
+	border-radius: 10px;
+	background-color: #FBF6F4;
+}
+
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #FBF6F4;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 3px rgba(0,0,0,.1);
+	background-color: #4e5155;
+}
